--- a/vignettes/V1_Getting_started.Rmd
+++ b/vignettes/V1_Getting_started.Rmd
@@ -41,7 +41,8 @@ my.sp <- "HOMA"
 obs_homa <- neigh_list[[my.sp]]
 # no need for ID column
 obs_homa <- subset(obs_homa,select = -c(obs_ID))
-# For each observation, we need the individual plant fitness and the number of neighbours per species (in columns).
+# For each observation, we need the individual plant fitness 
+# and the number of neighbours per species (in columns).
 head(obs_homa)
 ```
 
@@ -92,6 +93,8 @@ fit_homa$alpha_intra
 # interspecific interactions
 fit_homa$alpha_inter
 ```
+
+Note that some interaction coefficients are NA because species do not cooccur but are nevertheless listed as neighbours with densities equal to zero in all focal observations.
 
 **Fitting several species at once**
 
