--- a/vignettes/V5_Abundance_projections.Rmd
+++ b/vignettes/V5_Abundance_projections.Rmd
@@ -104,7 +104,7 @@ Projecting abundances from a `cxr` object is straightforward: just call the func
                              initial_abundances = initial_abundances)
 ```
 
-This function returns a simple numeric matrix with the projected abundances. Lastly, here is a basic plot showing the projection. This is a pedagogical example and does not make sense to interpret it ecologically, but it shows how one of the three species selected tends to become more abundant in the short term.
+This function returns a simple numeric matrix with the projected abundances. Lastly, here is a basic plot showing the projection. This is a pedagogical example and it does not make sense to interpret it ecologically, but it shows how one of the three species selected tends to become more abundant in the short term.
 
 ```{r}
 ab.df <- as.data.frame(ab)
@@ -204,8 +204,3 @@ BH_project_alpha_pairwise_lambdacov_global_alphacov_pairwise <- function(lambda,
 }
 
 ```
-
-
-
-
-
